--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.511.0",
     "ms": "^2.1.3",
     "react": "^19.1.0",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^22.15.18",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
